--- a/src/main/resources/templates/State.html
+++ b/src/main/resources/templates/State.html
@@ -415,7 +415,7 @@
         <!-- page start-->
           <div class="row">
               <div class="col-lg-12">
-                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal" data-whatever="@mdo">New Country</button>
+                  <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal" data-whatever="@mdo">New State</button>
                   <table class="table">
                       <thead>
                       <tr>
