added CommonObject base functionality with fixes for nav bar

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -328,9 +328,9 @@
                       </a>
             <ul class="sub">
               <li><a class="" th:href="@{/vehicles}">Vehicle Data</a></li>
-              <li><a class="" th:href="@{/vehiclemaintenances}">Maintenance</a></li>
-              <li><a class="" th:href="@{/vehiclemovements}">Movements</a></li>
-              <li><a class="" th:href="@{/vehiclehires}">Hires</a></li>
+              <li><a class="" th:href="@{/vehicleMaintenances}">Maintenance</a></li>
+              <li><a class="" th:href="@{/vehicleMovements}">Movements</a></li>
+              <li><a class="" th:href="@{/vehicleHires}">Hires</a></li>
             </ul>
           </li>
           <li class="sub-menu">
@@ -340,10 +340,10 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
             <ul class="sub">
-              <li><a class="" th:href="@{/vehiclemakes}">Vehicle Make</a></li>
-              <li><a class="" th:href="@{/vehicletypes}">Vehicle Types</a></li>
-              <li><a class="" th:href="@{/vehiclemodels}">Vehicle Models</a></li>
-              <li><a class="" th:href="@{/vehiclestatuses}">Status Values</a></li>
+              <li><a class="" th:href="@{/vehicleMakes}">Vehicle Make</a></li>
+              <li><a class="" th:href="@{/vehicleTypes}">Vehicle Types</a></li>
+              <li><a class="" th:href="@{/vehicleModels}">Vehicle Models</a></li>
+              <li><a class="" th:href="@{/vehicleStatuses}">Status Values</a></li>
             </ul>
           </li>
           <li class="sub-menu">
@@ -367,8 +367,8 @@
               <span class="menu-arrow arrow_carrot-right"></span>
             </a>
             <ul class="sub">
-              <li><a class="" th:href="@{/jobtitles}">Job Titles</a></li>
-              <li><a class="" th:href="@{/employeetypes}">Employee Types</a></li>
+              <li><a class="" th:href="@{/jobTitles}">Job Titles</a></li>
+              <li><a class="" th:href="@{/employeeTypes}">Employee Types</a></li>
             </ul>
           </li>
 
@@ -380,7 +380,7 @@
             </a>
             <ul class="sub">
               <li><a class="" th:href="@{/invoices}">Invoices</a></li>
-              <li><a class="" th:href="@{/invoicestatuses}">Invoice Status Values</a></li>
+              <li><a class="" th:href="@{/invoiceStatuses}">Invoice Status Values</a></li>
             </ul>
           </li>
 
