--- a/src/main/resources/templates/VehicleType.html
+++ b/src/main/resources/templates/VehicleType.html
@@ -324,9 +324,9 @@
                       </a>
                       <ul class="sub">
                           <li><a class="" th:href="@{/vehicles}">Vehicle Data</a></li>
-                          <li><a class="" th:href="@{/vehiclemaintenances}">Maintenance</a></li>
-                          <li><a class="" th:href="@{/vehiclemovements}">Movements</a></li>
-                          <li><a class="" th:href="@{/vehiclehires}">Hires</a></li>
+                          <li><a class="" th:href="@{/vehicleMaintenances}">Maintenance</a></li>
+                          <li><a class="" th:href="@{/vehicleMovements}">Movements</a></li>
+                          <li><a class="" th:href="@{/vehicleHires}">Hires</a></li>
                       </ul>
                   </li>
                   <li class="sub-menu">
@@ -336,10 +336,10 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" th:href="@{/vehiclemakes}">Vehicle Make</a></li>
-                          <li><a class="" th:href="@{/vehicletypes}">Vehicle Types</a></li>
-                          <li><a class="" th:href="@{/vehiclemodels}">Vehicle Models</a></li>
-                          <li><a class="" th:href="@{/vehiclestatuses}">Status Values</a></li>
+                          <li><a class="" th:href="@{/vehicleMakes}">Vehicle Make</a></li>
+                          <li><a class="" th:href="@{/vehicleTypes}">Vehicle Types</a></li>
+                          <li><a class="" th:href="@{/vehicleModels}">Vehicle Models</a></li>
+                          <li><a class="" th:href="@{/vehicleStatuses}">Status Values</a></li>
                       </ul>
                   </li>
                   <li class="sub-menu">
@@ -363,8 +363,8 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" th:href="@{/jobtitles}">Job Titles</a></li>
-                          <li><a class="" th:href="@{/employeetypes}">Employee Types</a></li>
+                          <li><a class="" th:href="@{/jobTitles}">Job Titles</a></li>
+                          <li><a class="" th:href="@{/employeeTypes}">Employee Types</a></li>
                       </ul>
                   </li>
 
@@ -376,7 +376,7 @@
                       </a>
                       <ul class="sub">
                           <li><a class="" th:href="@{/invoices}">Invoices</a></li>
-                          <li><a class="" th:href="@{/invoicestatuses}">Invoice Status Values</a></li>
+                          <li><a class="" th:href="@{/invoiceStatuses}">Invoice Status Values</a></li>
                       </ul>
                   </li>
 
@@ -413,7 +413,39 @@
           </div>
         </div>
         <!-- page start-->
-        <h1>List of Vehicle Types</h1>
+          <div class="row">
+              <div class="col-lg-12">
+                  <section class="panel">
+                      <header class="panel-heading">
+                          Employee Type Details
+                      </header>
+                      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">Add New</button>
+
+                      <table class="table table-striped table-advance table-hover">
+                          <tbody>
+                          <tr>
+                              <th><i class="icon_table"></i> Id</th>
+                              <th><i class="icon_table"></i>Description</th>
+                              <th><i class="icon_table"></i> Details</th>
+                              <th><i class="icon_cogs"></i> Action</th>
+                          </tr>
+                          <tr th:each="vehicleType:${vehicleTypes}">
+                              <td th:text="${vehicleType.id}">Id</td>
+                              <td th:text="${vehicleType.description}">Description</td>
+                              <td th:text="${vehicleType.details}">Details</td>
+                              <td>
+                                  <div class="btn-group">
+                                      <a class="btn btn-primary" th:href="@{/vehicleTypes/findById/(id=${vehicleType.id})}"><i class="icon_pencil-edit"></i></a>
+                                      <a class="btn btn-success" id="detailsButton" th:href="@{/vehicleTypes/findById/(id=${vehicleType.id})}"><i class="icon_document_alt"></i></a>
+                                      <a class="btn btn-danger"  id="deleteButton" th:href="@{/vehicleTypes/delete/(id=${vehicleType.id})}"><i class="icon_close_alt2"></i></a>
+                                  </div>
+                              </td>
+                          </tr>
+                          </tbody>
+                      </table>
+                  </section>
+              </div>
+          </div>
         <!-- page end-->
       </section>
     </section>
@@ -431,6 +463,145 @@
     </div>
   </section>
   <!-- container section end -->
+
+  <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <form th:action="@{/vehicleTypes/addNew}" method="post">
+          <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="exampleModalLabel">New Vehicle Record</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+
+                  <div class="modal-body">
+
+                      <div class="form-group">
+                          <label for="idAdd" class="col-form-label">Id:</label>
+                          <input type="text" class="form-control" id="idAdd" name="id" disabled>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="descriptionEdit" class="col-form-label">Description:</label>
+                          <input type="text" class="form-control" id="descriptionAdd" name="description" required>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="detailsEdit" class="col-form-label">Details:</label>
+                          <input type="text" class="form-control" id="detailsAdd" name="details">
+                      </div>
+                  </div>
+
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button type="submit" class="btn btn-primary">Save</button>
+                  </div>
+              </div>
+          </div>
+      </form>
+  </div>
+  <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+      <form th:action="@{/vehicleTypes/update}" method="put">
+          <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="editModalLabel">Edit Vehicle Type</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+                  <div class="modal-body">
+
+                      <div class="form-group">
+                          <label for="idEdit" class="col-form-label">Id:</label>
+                          <input type="text" class="form-control" id="idEdit" name="id" readonly>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="descriptionEdit" class="col-form-label">Description:</label>
+                          <input type="text" class="form-control" id="descriptionEdit" name="description" required>
+                      </div>
+
+                      <div class="form-group">
+                          <label for="detailsEdit" class="col-form-label">Details:</label>
+                          <input type="text" class="form-control" id="detailsEdit" name="details">
+                      </div>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                      <button type="submit" class="btn btn-primary">Save</button>
+                  </div>
+              </div>
+          </div>
+      </form>
+  </div>
+
+  <div class="modal fade" id="detailsModal" tabindex="-1" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true">
+      <form>
+          <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                  <div class="modal-header">
+                      <h5 class="modal-title" id="editModalLabel">Employee Type Details</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                      </button>
+                  </div>
+                  <div class="modal-body">
+
+                      <div class="form-group">
+                          <label class="col-form-label">Id:</label>
+                          <input type="text" class="form-control" id="idDetails" name="id" readonly>
+                      </div>
+
+                      <div class="form-group">
+                          <label class="col-form-label">Description:</label>
+                          <input type="text" class="form-control" id="descriptionDetails" name="description" readonly>
+                      </div>
+
+                      <div class="form-group">
+                          <label class="col-form-label">Details:</label>
+                          <input type="text" class="form-control" id="detailsDetails" name="details" readonly>
+                      </div>
+
+                      <div class="form-group">
+                          <label class="col-form-label">Last Updated By:</label>
+                          <input type="text" class="form-control" id="lastModifiedByDetails" name="lastModifiedBy" readonly>
+                      </div>
+
+                      <div class="form-group">
+                          <label class="col-form-label">Last Updated On:</label>
+                          <input type="text" class="form-control" id="lastModifiedDateDetails" name="lastModifiedDate" readonly>
+                      </div>
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  </div>
+              </div>
+          </div>
+      </form>
+  </div>
+
+  <div class="modal" tabindex="-1" role="dialog" id="deleteModal">
+      <div class="modal-dialog" role="document">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title">Confirm delete</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                  </button>
+              </div>
+              <div class="modal-body">
+                  <p>Are you sure you want to delete this record?</p>
+              </div>
+              <div class="modal-footer">
+                  <a href="" class="btn btn-primary" id="delRef">Yes, Delete</a>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              </div>
+          </div>
+      </div>
+  </div>
+
   <!-- javascripts -->
   <script src="js/jquery.js"></script>
   <script src="js/bootstrap.min.js"></script>
@@ -439,6 +610,7 @@
   <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
   <!--custome script for all page-->
   <script src="js/scripts.js"></script>
+  <script src="js/vehicleType.js"></script>
 
 
 </body>
