--- a/src/main/resources/templates/InvoiceStatus.html
+++ b/src/main/resources/templates/InvoiceStatus.html
@@ -541,7 +541,7 @@
           <div class="modal-dialog" role="document">
               <div class="modal-content">
                   <div class="modal-header">
-                      <h5 class="modal-title" id="editModalLabel">Employee Type Details</h5>
+                      <h5 class="modal-title" id="editModalLabel">Invoice Status Details</h5>
                       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                           <span aria-hidden="true">&times;</span>
                       </button>
