--- a/src/main/resources/templates/JobTitle.html
+++ b/src/main/resources/templates/JobTitle.html
@@ -417,7 +417,7 @@
               <div class="col-lg-12">
                   <section class="panel">
                       <header class="panel-heading">
-                          Employee Type Details
+                          Job Title Details
                       </header>
                       <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal">Add New</button>
 
